# opencode-analysis

./: .gitignore  ESSENTIAL_FEATURES.md  FEATURE_COMPARISON.md  OPENCODE_ANALYSIS.md  OPENCODE_IMPLEMENTATION_DETAILS.md  PYCODE_VS_OPENCODE_V2.md  PYTHON_IMPLEMENTATION_GUIDE.md  QUICK_COMPARISON.md  README.md  SUMMARY.md  package-lock.json  package.json
pycode/: .gitignore  ALL_TOOLS_SUMMARY.md  API_KEY_SETUP.md  CLI_OLLAMA_QUICKSTART.md  CONFIGURATION_UPDATE_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  FEATURES.md  IMPROVEMENTS_SUMMARY.md  NEW_FEATURES.md  NEW_TOOLS.md  OLLAMA_SETUP.md  OLLAMA_USAGE.md  PROVIDER_CONFIGURATION.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  WINDOWS_COMPATIBILITY.md  advanced_demo.py  comprehensive_demo.py  config.example.yaml  demo.py  demo_ollama.py  demo_pycode_features.py  demo_ui.py  example_module.py  new_tools_demo.py  pycode.yaml.example  pycode_cli.py  pyproject.toml  pytest.ini  quick_ollama_example.py  quick_start_example.py  requirements-test.txt  requirements.txt  run_demo_with_llm.py  setup_api_key.py  test_output.md  test_providers.py  test_system.py  tool_prompt_example.py  (+1 more)
pycode/examples/: basic_usage.py
pycode/src/pycode/: __init__.py  cli_new.py  config.py  history.py  logging.py  provider_aliases.py  provider_factory.py  retry.py  runner.py  session_manager.py  tool_approval.py  tool_validation.py  ui.py
pycode/src/pycode/agents/: __init__.py  base.py  build.py  plan.py
pycode/src/pycode/cli/: __init__.py  commands.py  main_old.py
pycode/src/pycode/core/: __init__.py  identifier.py  message.py  session.py
pycode/src/pycode/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  gemini_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py
pycode/tests/: README.md  __init__.py  conftest.py  test_logging.py  test_provider_aliases.py  test_retry.py  test_tool_validation.py
(+19 files in other folders)
